--- a/Plan.ipynb
+++ b/Plan.ipynb
@@ -345,7 +345,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "With method should be fine-tuned. We can do with using Cross-Validation."
+    "These methods should be fine-tuned. We can do this using Cross-Validation."
    ]
   },
   {
