--- a/Plan.ipynb
+++ b/Plan.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# <font color=\"red\">TODO: Regression</font>\n",
+    "# TODO: Regression\n",
     "## Sections:\n",
     "\n",
     "* [1. Feature selection](#section1)\n",
@@ -21,7 +21,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"blue\">1. Feature selection</font> <a id=\"section1\"/>"
+    "## 1. Feature selection <a id=\"section1\"/>"
    ]
   },
   {
@@ -150,7 +150,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"blue\">2. Models for regression</font> <a id=\"section2\"/>"
+    "## 2. Models for regression <a id=\"section2\"/>"
    ]
   },
   {
@@ -338,7 +338,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## <font color=\"blue\">3. Model selection</font> <a id=\"section3\"/>"
+    "## 3. Model selection <a id=\"section3\"/>"
    ]
   },
   {
